--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/AnupamRanku
+  github: AnupamRanku
   instagram:
-  linkedin: https://www.linkedin.com/in/ranku/
+  linkedin: ranku/
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: anupamranku
@@ -45,7 +45,7 @@ url: http://ranku.site
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name/"
-baseurl: ""
+baseurl: "/about/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
